fixed frontend mentor report

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,11 @@
   <title>Frontend Mentor | FAQ accordion</title>
 </head>
 <body>
-  <div class="main-bg">
-    <img class="main-bg__image--desktop" width="100%" src="images/background-pattern-desktop.svg" alt="background-pattern">
-    <img class="main-bg__image--mobile" width="100%" src="images/background-pattern-mobile.svg" alt="background-pattern">
-  </div>
-
   <main>
+    <div class="main-bg">
+      <img class="main-bg__image--desktop" src="images/background-pattern-desktop.svg" alt="background-pattern">
+      <img class="main-bg__image--mobile" src="images/background-pattern-mobile.svg" alt="background-pattern">
+    </div>
     <section>
       <div class="faq-card">
         <div class="faq-card__header">
