fixed BEM class names and used data attributes to separte my js from css

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       <img class="main-bg__image--desktop" src="images/background-pattern-desktop.svg" alt="background-pattern">
       <img class="main-bg__image--mobile" src="images/background-pattern-mobile.svg" alt="background-pattern">
     </div>
+    
     <section>
       <div class="faq-card">
         <div class="faq-card__header">
@@ -26,48 +27,48 @@
           <h1>FAQs</h1>
         </div>
 
-        <ul class="faq-card__list">
+        <ul class="faq-card-list">
           <li>
-            <div class="faq-card__list__header">
-              <h2 class="open_accordion_btn">What is Frontend Mentor, and how will it help me?</h2>
-              <img class="plus_icon_js" src="images/icon-plus.svg" alt="plus-icon">
-              <img class="faq-card__list__header__minus__icon minus_icon_js" src="images/icon-minus.svg" alt="minus-icon">
+            <div data-accordion-button="accordion-button-1" class="faq-card-list__header">
+              <h2>What is Frontend Mentor, and how will it help me?</h2>
+              <img data-plus-icon="plus-icon-1" class="plus-icon" src="images/icon-plus.svg" alt="plus-icon">
+              <img data-minus-icon="minus-icon-1" class="minus-icon" src="images/icon-minus.svg" alt="minus-icon">
             </div>
-            <p class="faq-card__list__body accordion_body_js">
+            <p data-card-body="card-body-1" class="faq-card-list__body">
               Frontend Mentor offers realistic coding challenges to help developers improve their 
               frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
               all levels and ideal for portfolio building.
             </p>
           </li>
           <li>
-            <div class="faq-card__list__header">
-              <h2 class="open_accordion_btn">Is Frontend Mentor free?</h2>
-              <img class="plus_icon_js" src="images/icon-plus.svg" alt="plus-icon">
-              <img class="faq-card__list__header__minus__icon minus_icon_js" src="images/icon-minus.svg" alt="minus-icon">
+            <div data-accordion-button="accordion-button-2" class="faq-card-list__header">
+              <h2>Is Frontend Mentor free?</h2>
+              <img data-plus-icon="plus-icon-2" class="plus-icon" src="images/icon-plus.svg" alt="plus-icon">
+              <img data-minus-icon="minus-icon-2" class="minus-icon" src="images/icon-minus.svg" alt="minus-icon">
             </div>
-            <p class="faq-card__list__body accordion_body_js">
+            <p data-card-body="card-body-2" class="faq-card-list__body">
               Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
               option providing access to a range of projects suitable for all skill levels.
             </p>
           </li>
           <li>
-            <div class="faq-card__list__header">
-              <h2 class="open_accordion_btn">Can I use Frontend Mentor projects in my portfolio?</h2>
-              <img class="plus_icon_js" src="images/icon-plus.svg" alt="plus-icon">
-              <img class="faq-card__list__header__minus__icon minus_icon_js" src="images/icon-minus.svg" alt="minus-icon">
+            <div data-accordion-button="accordion-button-3" class="faq-card-list__header">
+              <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+              <img data-plus-icon="plus-icon-3" class="plus-icon" src="images/icon-plus.svg" alt="plus-icon">
+              <img data-minus-icon="minus-icon-3" class="minus-icon" src="images/icon-minus.svg" alt="minus-icon">
             </div>
-            <p class="faq-card__list__body accordion_body_js">
+            <p data-card-body="card-body-3" class="faq-card-list__body">
               Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
               way to showcase your skills to potential employers!
             </p>
           </li>
           <li>
-            <div class="faq-card__list__header">
-              <h2 class="open_accordion_btn">How can I get help if I'm stuck on a challenge?</h2>
-              <img class="plus_icon_js" src="images/icon-plus.svg" alt="plus-icon">
-              <img class="faq-card__list__header__minus__icon minus_icon_js" src="images/icon-minus.svg" alt="minus-icon">
+            <div data-accordion-button="accordion-button-4" class="faq-card-list__header">
+              <h2>How can I get help if I'm stuck on a challenge?</h2>
+              <img data-plus-icon="plus-icon-4" class="plus-icon" src="images/icon-plus.svg" alt="plus-icon">
+              <img data-minus-icon="minus-icon-4" class="minus-icon" src="images/icon-minus.svg" alt="minus-icon">
             </div>
-            <p class="faq-card__list__body accordion_body_js">
+            <p data-card-body="card-body-4" class="faq-card-list__body">
               The best place to get help is inside Frontend Mentor's Discord community. There's a help 
               channel where you can ask questions and seek support from other community members.
             </p>
